5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4126/executions/1593_1801.log
== SUBMITION (2019-03-28 11:02:13) 
-- CODE:
x1 = (input("nome do objeto"))
x2 = (input(" nrf "))
print((" Abra " + x1 + " ") * x2)

-- EXECUTION TIME:
0.186646
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1801/main.py", line 3, in <module>
    print((" Abra " + x1 + " ") * x2)
TypeError: can't multiply sequence by non-int of type 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:02:34) 
-- CODE:
x1 = (input("nome do objeto"))
x2 = (input(" nrf "))
print(("Abra " + x1 + " ") * x2)

-- EXECUTION TIME:
0.224126
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/1801/main.py", line 3, in <module>
    print(("Abra " + x1 + " ") * x2)
TypeError: can't multiply sequence by non-int of type 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:02:36) 
-- CODE:
x1 = (input("nome do objeto"))
x2 = (input(" nrf "))
print(("Abra " + x1 + " ") * x2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(("Abra " + x1 + " ") * x2)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:02:54) 
-- CODE:
x1 = (input("nome do objeto"))
x2 = (int(input(" nrf "))
print(("Abra " + x1 + " ") * x2)

-- EXECUTION TIME:
0.193334
-- ERROR:
  File "/home/codebench/codes/1593/1801/main.py", line 3
    print(("Abra " + x1 + " ") * x2)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:03:08) 
-- CODE:
x1 = (input("nome do objeto"))
x2 = (int(input(" nrf "))
print(("Abra " + x1 + " ") * x2)

-- EXECUTION TIME:
0.177068
-- ERROR:
  File "/home/codebench/codes/1593/1801/main.py", line 3
    print(("Abra " + x1 + " ") * x2)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:03:48) 
-- CODE:
x1 = (input("nome do objeto "))
x2 = (int(input(" nrf "))
print(("Abra " + x1 + " ") * x2)

-- EXECUTION TIME:
0.156617
-- ERROR:
  File "/home/codebench/codes/1593/1801/main.py", line 3
    print(("Abra " + x1 + " ") * x2)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:04:14) 
-- CODE:
x1 = input("nome do objeto ")
x2 = int(input(" nrf "))
print(("Abra " + x1 + " ") * x2)

-- EXECUTION TIME:
0.157889
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
